[gd_scene load_steps=11 format=3 uid="uid://blqcsx6hosf1l"]

[ext_resource type="Script" uid="uid://tfp80k8a1flb" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Script" uid="uid://yji8k11ohtx4" path="res://scripts/user_interface.gd" id="2_tefeu"]
[ext_resource type="PackedScene" uid="uid://ft8j0t30py31" path="res://scenes/player.tscn" id="3_o6xl0"]
[ext_resource type="Texture2D" uid="uid://b6i5cci7xoioj" path="res://assets/RestartButton.png" id="3_tipki"]
[ext_resource type="Texture2D" uid="uid://ci8eabg3ly6qp" path="res://assets/Score.png" id="4_85g3d"]
[ext_resource type="Script" uid="uid://b16drllnycsgx" path="res://scripts/ennemi_manager.gd" id="4_tipki"]
[ext_resource type="Texture2D" uid="uid://bn2jkp6qeyn51" path="res://assets/GameOver.png" id="5_85g3d"]
[ext_resource type="Texture2D" uid="uid://fmdwsuifiseb" path="res://assets/BackgroundSnowPanic.png" id="5_tefeu"]
[ext_resource type="AudioStream" uid="uid://buxyjqh86vkr4" path="res://sounds/SnowPanicMainMusic.ogg" id="9_85g3d"]

[sub_resource type="Theme" id="Theme_lquwl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_lquwl")
script = ExtResource("2_tefeu")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
z_index = 1
layout_mode = 0
offset_left = 280.0
offset_top = 14.0
offset_right = 290.0
offset_bottom = 37.0
text = "0"

[node name="ScoreTimer" type="Timer" parent="UserInterface"]
wait_time = 5.0
autostart = true

[node name="RestartButton" type="TextureButton" parent="UserInterface"]
process_mode = 2
z_index = 3
layout_mode = 0
offset_left = 119.0
offset_top = 433.0
offset_right = 246.0
offset_bottom = 507.0
texture_normal = ExtResource("3_tipki")
stretch_mode = 4

[node name="ScoreLabelSprite" type="Sprite2D" parent="UserInterface"]
position = Vector2(278, 26)
texture = ExtResource("4_85g3d")

[node name="Player" parent="." instance=ExtResource("3_o6xl0")]
z_index = 1

[node name="EnnemiManager" type="Node" parent="."]
script = ExtResource("4_tipki")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(180, 320)
scale = Vector2(4, 4)
texture = ExtResource("5_tefeu")

[node name="GameOverSprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(180, 320)
scale = Vector2(4, 4)
texture = ExtResource("5_85g3d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_85g3d")

[connection signal="timeout" from="UserInterface/ScoreTimer" to="UserInterface" method="_on_score_timer_timeout"]
